assets/css/style.css
*, *:before, *:after {
    box-sizing: border-box;
    padding: 0;
    margin: 0;
}

body {
    font-size: 16px;
    background: white;
    text-align: center;
}

main {
    height: calc(100vh - 30px);
    padding: 20px;
}

footer {
    height: 30px;
    font-size: 1.2em;
}

footer p {
    line-height: 30px;
}

main .quote-box {
    color: white;
    background: black;
    border-radius: 7px;
    padding: 20px;
    height: calc(100vh - 50px); /* less footer */
}

main .quote-text {
    z-index:1;
    background-color:rgba(39, 40, 34, 0.8);
    font-size: 2em;
    padding: 10px;

    min-height: 20vh;
    position: absolute;
    width: calc(100vw - 80px); /* 2x20 padding on left and 2x20 on right */

    display: table;
}

main .quote-text>div {
    display: table-cell;
    vertical-align: middle;
}

main .quote-photo {
    margin-top: 10vh;
    height: calc(80vh - 62px);
    background: url("../../assets/img/blank.jpg");
    background-size: auto calc(80vh - 62px);
    background-repeat: no-repeat;
    background-position: center;
}

main .quote-author {
    z-index: 2;
    height: 40px;
    font-size: 1.2em;
    line-height: 40px;

    position: absolute;
    bottom: 40px;
    width: calc(100vw - 80px);
}

.btn, button {

    color: white;
    background: rgba(0, 0, 0, 0.7);
    height: 10vh;
    width: 25vw;
    max-width: 160px !important;
    line-height: 30px;

    font-size: 18px;

    border: 1px solid white;
    border-radius: 4px;
}

.btn:focus, button:focus {
    outline-color: transparent;
}

.btn:hover, button:hover {
    box-shadow: 0 0 14px white;
}


.twit {
    position: absolute;
    left: 0px;
    bottom: 40px;
    line-height: 10vh;
}

.random {
    position: absolute;
    right: 0px;
    bottom: 40px;
}

.spinner-container {
    color: #fff;
    background: #000;
    opacity: 1;
    border-radius: 7px;

    position: fixed;
    top: 0;
    left: 0;

    z-index: 999;
    display: flex;
    align-items: center;
    justify-content: center;

    height: calc(100vh - 50px);
    width: calc(100vw - 40px);
    margin: 20px 20px 0 20px;
}

.loader {
    border: 16px solid #f3f3f3; /* Light grey */
    border-top: 16px solid #3498db; /* Blue */
    border-radius: 50%;
    width: 120px;
    height: 120px;
    animation: spin 2s linear infinite;
}

.loading-text {
    animation: spintext  2s linear infinite;
}

@keyframes spin {
    0% { transform: rotate(0deg); }
    100% { transform: rotate(360deg); }
}

@keyframes spintext {
    0% { transform: rotate(45deg); }
    70% { transform: rotate(120deg); }
    100% { transform: rotate(360deg); }
}

@media screen and (orientation:landscape) {

    main .quote-text,
    main .quote-author{
        float: left;
    }

    main .quote-photo {
        margin: 0;
        width: 50%;
        height: calc(100vh - 90px);

        background-size: auto calc(100vh - 90px);
        background-repeat: no-repeat;
        background-position: center;

        float: right;
    }

    main .quote-text {
        height: 230px;
        padding-bottom: 40px;
        width: calc(50% - 40px);
        top: calc(50% - 120px);
        left: 40px;
    }

    main .quote-author {
        width: calc(50% - 40px);
        padding: 0 20px;

        position: absolute;
        top: calc(50vh + 60px);
        left: 40px;
        text-align: right;
    }

    .random {
        position: fixed;
        right: 40px;
        top: 40px;
    }

    .twit {
        position: fixed;
        right: 40px;
        top: calc(10vh + 60px);
        left: auto;
        text-align: center;
    }

    @media (max-height: 720px) {
        main .quote-text {
            font-size: 1.4em;
            max-height: calc(100vh - 80px);
        }
    }
}

@media (min-width: 700px) and (min-height: 800px){
    @media (orientation:portrait) {
        main .quote-text {
            font-size: 4em;
        }
    }
}

